--- a/frontend/playlist-frontend/src/app/navbar/navbar.component.html
+++ b/frontend/playlist-frontend/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <mat-toolbar-row>
     <a mat-button routerLink="/" aria-label="KEXP Playlist">
       <img class="kexp-logo"
-        src="/static/angular/assets/orangebars.png"
+        src="/assets/orangebars.png"
         alt="KEXP Logo">
       <span>KEXP Playlist</span>
     </a>
