--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
@@ -1,74 +1,72 @@
+.playlist-item {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1rem;
+}
+
 .card-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     flex-grow: 1;
 
     .mat-card-header {
-        flex: 0 0 25%;
+      flex: 1 0 25%;
     }
 }
 
 .airdate {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 90px; // ensure the chip has enough space to fill
-    margin-right: 16px;
-    flex-shrink: 0;
-}
-
-.playlist-item {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90px; // ensure the chip has enough space to fill
+  margin-right: 1rem;
+  flex-shrink: 0;
 }
 
 .play-info-section {
 
-    .release-name {
-        font-style: italic;
-    }
+  .release-name {
+    font-style: italic;
+  }
 }
 
 .comment-form-section {
     flex-grow: 1;
-    margin-left: 16px;
 
     .existing-comment{
 
-        .comment-text {
-            text-indent: 25px;
-            line-height: 1.5;
+      .comment-text {
+        text-indent: 25px;
+        line-height: 1.5;
 
-            a {
-                color: inherit;
-                text-decoration: none;
-            }
+        a {
+            color: inherit;
+            text-decoration: none;
         }
+      }
     }
 
     .full-width-comment {
-        width: 100%;
+      width: 100%;
     }
 
     .full-width-comment, .existing-comment {
-        margin-bottom: 24px;
+      margin-bottom: 24px;
     }
 
     .form-container {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
     }
 
     .form-buttons {
-        display: flex;
-        justify-content: flex-end;
+      display: flex;
 
-        button, .comment-author-credit {
-            margin-right: 8px;
-        }
-
+      button {
+        margin-right: 8px;
+      }
     }
 }
 
@@ -78,7 +76,6 @@
     overflow: hidden;
     white-space: nowrap;
     flex-grow: 1;
-    margin-left: 16px;
 
     span {
         position: relative;
@@ -107,8 +104,9 @@
 
 .album-art {
     background: radial-gradient(#616161,#212121);
-    flex: 0 0 150px;
+    width: 150px;
     height: 150px;
+    margin-bottom: 1rem;
 
     // center positioning and coloring of the placeholder svg
     // might be kinda hacky
