Change button labelling

--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
@@ -91,7 +91,7 @@
                         (click)="onCommentSave()"
                         [disabled]="!commentForm.valid"
                         color="accent">
-                        Save comment
+                        Save
                     </button>
                     <button
                         *ngIf="!commentEditorVisible"
