Update disclaimer yet again

--- a/frontend/playlist-frontend/src/app/navbar/navbar.component.html
+++ b/frontend/playlist-frontend/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         alt="KEXP Logo">
       <span>KEXP Playlist</span>
     </a>
-    <p class="kexp-orange mat-caption">This app not a part of the official KEXP website</p>
+    <p class="kexp-orange mat-caption">This app is not a part of the official KEXP website</p>
     <div class="flex-spacer"></div>
     <div *ngIf="currentAuthor" class="author-select">
       <button mat-button (click)="toggleSidenav()" class="mat-caption">
