Fix header margins

--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
@@ -63,7 +63,7 @@
                     <textarea
                         type="text"
                         rows="5"
-                        placeholder="Add a comment or links to this play"
+                        placeholder="Click to add a comment or links to this play"
                         formControlName="commentText"
                         matInput
                         required>
