--- a/frontend/playlist-frontend/src/app/playlist/playlist.component.scss
+++ b/frontend/playlist-frontend/src/app/playlist/playlist.component.scss
@@ -9,22 +9,18 @@
         flex-direction: row;
         align-items: center;
 
-        .on-air {
-            margin: 0 16px 16px 0;
+        .on-air, .host-avatar {
+            margin: 0 1rem 1rem 0;
         }
 
         .show-info-container {
             display: flex;
             flex-direction: column;
-            margin: 0 50px 16px 0;
+            margin: 0 0px 1rem 0;
 
             .mat-h4 {
                 margin-bottom: 0px;
             }
-        }
-
-        .host-avatar {
-            margin: 0 16px 16px 0;
         }
     }
 }
