Move disclaimer out of navbar

--- a/frontend/playlist-frontend/src/app/playlist/playlist.component.html
+++ b/frontend/playlist-frontend/src/app/playlist/playlist.component.html
@@ -1,4 +1,5 @@
 <div class="playlist-container">
+  <p class="kexp-orange mat-caption disclaimer">This app is not a part of the official KEXP website</p>
   <div class="header-section" [@playlistLoaded]="(recentPlays && currentShow) ? 'loaded' : 'waiting'">
     <div class="header-content">
       <h1 class="mat-h1">Playlist</h1>
