--- a/frontend/playlist-frontend/src/app/playlist/playlist.component.html
+++ b/frontend/playlist-frontend/src/app/playlist/playlist.component.html
@@ -1,6 +1,6 @@
-<div class="playlist-container">
+<div class="playlist-container" [@playlistLoaded]="(recentPlays && currentShow) ? 'loaded' : 'waiting'">
   <p class="kexp-orange mat-caption disclaimer">This app is not a part of the official KEXP website</p>
-  <div class="header-section" [@playlistLoaded]="(recentPlays && currentShow) ? 'loaded' : 'waiting'">
+  <div class="header-section">
     <div class="header-content">
       <h1 class="mat-h1">Playlist</h1>
       <div class="flex-spacer"></div>
@@ -22,7 +22,7 @@
     </div>
     <mat-divider></mat-divider>
   </div>
-  <div class="card-list-container mat-typography" [@playlistLoaded]="(recentPlays && currentShow) ? 'loaded' : 'waiting'">
+  <div class="card-list-container mat-typography">
     <app-playlist-item *ngFor="let play of recentPlays" [play]="play">
     </app-playlist-item>
   </div>
